; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_list_item_remove.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_list_item_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_property_list_item_remove(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.list_data*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.list_data* @get_list_data(i32* %6)
  store %struct.list_data* %7, %struct.list_data** %5, align 8
  %8 = load %struct.list_data*, %struct.list_data** %5, align 8
  %9 = icmp ne %struct.list_data* %8, null
  br i1 %9, label %10, label %35

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  %12 = load %struct.list_data*, %struct.list_data** %5, align 8
  %13 = getelementptr inbounds %struct.list_data, %struct.list_data* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ult i64 %11, %15
  br i1 %16, label %17, label %35

17:                                               ; preds = %10
  %18 = load %struct.list_data*, %struct.list_data** %5, align 8
  %19 = load %struct.list_data*, %struct.list_data** %5, align 8
  %20 = getelementptr inbounds %struct.list_data, %struct.list_data* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* %4, align 8
  %24 = add i64 %22, %23
  %25 = call i32 @list_item_free(%struct.list_data* %18, i64 %24)
  %26 = load %struct.list_data*, %struct.list_data** %5, align 8
  %27 = getelementptr inbounds %struct.list_data, %struct.list_data* %26, i32 0, i32 0
  %28 = load i64, i64* %4, align 8
  %29 = bitcast %struct.TYPE_2__* %27 to { i64, i64 }*
  %30 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %29, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @da_erase(i64 %31, i64 %33, i64 %28)
  br label %35

35:                                               ; preds = %17, %10, %2
  ret void
}

declare dso_local %struct.list_data* @get_list_data(i32*) #1

declare dso_local i32 @list_item_free(%struct.list_data*, i64) #1

declare dso_local i32 @da_erase(i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
